--- a/localisation/braz_por/MD_focus_ARM_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_ARM_l_braz_por.yml
@@ -1551,16 +1551,6 @@
  AZE_karabakh_defeat_desc: "A derrota na guerra dos anos 90 foi uma ferida dolorosa para nossa nação. Os azerbaijanos anseiam por vingança para recuperar suas terras históricas, bem como devolver milhares de refugiados às suas casas."
  AZE_karabakh_revanchism: "Revanchismo de Karabakh"
  AZE_karabakh_revanchism_desc: "O povo azerbaijano, que perdeu a guerra de Artsakh com grande apoio internacional, permaneceu humilhado na arena internacional, e o povo, cegado pelo fracasso, está cada vez mais inclinado ao nacionalismo e à adesão às forças armadas."
- ARM_huge_unemployment_5: "Desemprego elevado"
- ARM_huge_unemployment_5_desc: "Mais de um terço da população está desempregada. Cerca de metade é pobre. Para a economia se desenvolver, é necessário melhorar o bem-estar da população."
- ARM_huge_unemployment_4: "Desemprego muito alto"
- ARM_huge_unemployment_4_desc: "Aproximadamente um terço da população está desempregada. Embora o governo tenha começado a trabalhar para melhorar a situação, ainda há um longo caminho a percorrer antes de se chegar a uma decisão final."
- ARM_huge_unemployment_3: "Desemprego elevado"
- ARM_huge_unemployment_3_desc: "A luta contra o desemprego está ganhando impulso. Embora o problema ainda preocupe a população, os resultados das mudanças já são visíveis."
- ARM_huge_unemployment_2: "Desemprego médio"
- ARM_huge_unemployment_2_desc: "O desemprego é de 10%. A crise do colapso da URSS está começando a ser superada lentamente."
- ARM_huge_unemployment_1: "Baixo desemprego"
- ARM_huge_unemployment_1_desc: "O desemprego está quase derrotado. A economia pode finalmente se desenvolver, e o bem-estar da população começa a melhorar."
  ARM_high_emigration_5: "Alto nível de emigração"
  ARM_high_emigration_5_desc: "Com o colapso da URSS e a deterioração da situação econômica, muitos países da CEI se tornaram reféns da migração externa crescente. Nas realidades atuais, a Armênia corre o risco de extinção, o que não pode ser dito sobre seu vizinho oriental e principal inimigo político. A solução da questão demográfica deve se tornar a principal agenda da política armênia."
  ARM_high_emigration_4: "Nível substancial de emigração"
@@ -2034,8 +2024,6 @@
  ARM_idea_eacu_cooperation_desc: "A União Aduaneira da Eurásia (originalmente a Comunidade Econômica Eurasiática) promove laços econômicos entre a maioria dos estados pós-soviéticos. A união impõe uma tarifa externa comum a todos os bens que entram na união e age como uma entidade singular ao negociar acordos comerciais e negociações."
  ARM_idea_eacu_cooperation_2: "Cooperação Integrada da EACU"
  ARM_idea_eacu_cooperation_2_desc: "A União Aduaneira da Eurásia (originalmente a Comunidade Econômica Eurasiática) promove laços econômicos entre a maioria dos estados pós-soviéticos. A união impõe uma tarifa externa comum a todos os bens que entram na união e age como uma entidade singular ao negociar acordos comerciais e negociações."
- ARM_inner_network_idea: "Rede Interna"
- ARM_inner_network_idea_desc: "A rede interna de agentes e informantes está assegurando os interesses do estado."
  ARM_idea_pro_farmers: "Pró-Agricultores"
  ARM_idea_pro_farmers_desc: "Mesmo que estejamos gradualmente nos afastando de uma sociedade mais agrária, ainda é importante ser pró-agricultor."
  ARM_idea_agrotech: "AgroTecnologia"
@@ -2046,3 +2034,5 @@
  ARM_renewable_energy_focus3: "Energia Renovável"
  ARM_militarism: "Militarismo"
  ARM_militarism_desc: "O militarismo é a crença ou o desejo de um governo ou de um povo de que um Estado deve manter uma forte capacidade militar e utilizá-la agressivamente para expandir os interesses e/ou valores nacionais. Pode também implicar a glorificação dos militares e dos ideais de uma classe militar profissional e a predominância das forças armadas na administração ou política do Estado."
+ ARM_internal_network_idea: "Rede interna"
+ ARM_internal_network_idea_desc: "A rede interna de agentes e informadores está a garantir os interesses do Estado."
