--- a/localisation/polish/MD_focus_ARM_l_polish.yml
+++ b/localisation/polish/MD_focus_ARM_l_polish.yml
@@ -1551,16 +1551,6 @@
  AZE_karabakh_defeat_desc: "Klęska w wojnie lat 90. była bolesną raną dla naszego narodu. Azerbejdżanie pragną zemsty, aby zwrócić swoje historyczne ziemie, a także tysiące uchodźców do swoich domów"
  AZE_karabakh_revanchism: "Rewanżyzm Karabachu"
  AZE_karabakh_revanchism_desc: "Naród Azerbejdżanu, który przy wielkim wsparciu międzynarodowym przegrał wojnę w Artsakh, pozostaje upokorzony na arenie międzynarodowej, a zaślepiony niepowodzeniami, coraz bardziej skłania się ku nacjonalizmowi i wstępowaniu do sił zbrojnych."
- ARM_huge_unemployment_5: "Ogromne bezrobocie"
- ARM_huge_unemployment_5_desc: "Ponad jedna trzecia populacji jest bezrobotna. Około połowa jest biedna. Aby gospodarka mogła się rozwijać, konieczna jest poprawa dobrobytu ludności."
- ARM_huge_unemployment_4: "Bardzo wysokie bezrobocie"
- ARM_huge_unemployment_4_desc: "Około jedna trzecia populacji jest bezrobotna. Choć rząd rozpoczął prace nad poprawą sytuacji, do podjęcia ostatecznej decyzji jeszcze daleka droga."
- ARM_huge_unemployment_3: "Wysokie bezrobocie"
- ARM_huge_unemployment_3_desc: "Walka z bezrobociem nabrała tempa. Choć problem nadal niepokoi społeczeństwo, już widać skutki zmian."
- ARM_huge_unemployment_2: "Przeciętne bezrobocie"
- ARM_huge_unemployment_2_desc: "Bezrobocie wynosi 10%. Kryzys rozpadu ZSRR powoli zaczyna przezwyciężać."
- ARM_huge_unemployment_1: "Niskie bezrobocie"
- ARM_huge_unemployment_1_desc: "Bezrobocie prawie zostało pokonane. Gospodarka może wreszcie się rozwijać, dobrobyt ludności zaczyna się poprawiać."
  ARM_high_emigration_5: "Wysoki poziom emigracji"
  ARM_high_emigration_5_desc: "Wraz z upadkiem ZSRR i pogarszającą się sytuacją gospodarczą wiele krajów WNP stało się zakładnikami wzmożonej migracji zewnętrznej. W dzisiejszych realiach Armenii grozi wyginięcie, czego nie można powiedzieć o jej wschodnim sąsiadu i głównym wrogu politycznym. Rozwiązanie kwestii demograficznych powinno stać się głównym programem ormiańskiej polityki."
  ARM_high_emigration_4: "Znaczący poziom emigracji"
@@ -2034,8 +2024,6 @@
  ARM_idea_eacu_cooperation_desc: "Euroazjatycka Unia Celna (pierwotnie Euroazjatycka Wspólnota Gospodarcza) promuje powiązania gospodarcze pomiędzy większością państw poradzieckich. Unia nakłada wspólną taryfę zewnętrzną na wszystkie towary wprowadzane do Unii i działa jako jedna całość podczas tworzenia umów handlowych i negocjacji."
  ARM_idea_eacu_cooperation_2: "Zintegrowana współpraca EACU"
  ARM_idea_eacu_cooperation_2_desc: "Euroazjatycka Unia Celna (pierwotnie Euroazjatycka Wspólnota Gospodarcza) promuje powiązania gospodarcze pomiędzy większością państw poradzieckich. Unia nakłada wspólną taryfę zewnętrzną na wszystkie towary wprowadzane do Unii i działa jako jedna całość podczas tworzenia umów handlowych i negocjacji."
- ARM_inner_network_idea: "Sieć wewnętrzna"
- ARM_inner_network_idea_desc: "Wewnętrzna sieć agentów i informatorów zabezpiecza interesy państwa."
  ARM_idea_pro_farmers: "Prorolnicy"
  ARM_idea_pro_farmers_desc: "Ponieważ powoli odchodzimy od społeczeństwa bardziej agrarnego, nadal ważne jest, aby być prorolnikami."
  ARM_idea_agrotech: "AgroTech"
@@ -2046,3 +2034,5 @@
  ARM_renewable_energy_focus3: "Energia odnawialna"
  ARM_militarism: "Militaryzm"
  ARM_militarism_desc: "Militaryzm to przekonanie lub pragnienie rządu lub narodu, że państwo powinno utrzymywać silny potencjał militarny i agresywnie go wykorzystywać w celu poszerzania interesów narodowych i/lub wartości. Może także oznaczać gloryfikację wojska i ideałów zawodowej klasy wojskowej oraz dominację sił zbrojnych w administracji lub polityce państwa"
+ ARM_internal_network_idea: "Wewnętrzna sieć"
+ ARM_internal_network_idea_desc: "Wewnętrzna sieć agentów i informatorów zabezpiecza interesy państwa."
