--- a/localisation/polish/MD_focus_PER_l_polish.yml
+++ b/localisation/polish/MD_focus_PER_l_polish.yml
@@ -573,8 +573,8 @@
  PER_ask_russia_to_embargo_turkey_desc: "Kto lubi Turcję? *klaszcz, klaszcz, klaszcz, klaszcz, klaszcz* To nie nasza trójka! *Klaś, klaszcz, klaszcz, klaszcz, klaszcz*"
  PER_ask_armenia_to_embargo_turkey: "Poproś Armenię o nałożenie embarga na Turcję"
  PER_ask_armenia_to_embargo_turkey_desc: "Kto lubi Turcję? *klaszcz, klaszcz, klaszcz, klaszcz, klaszcz* To nie nasza trójka! *Klaś, klaszcz, klaszcz, klaszcz, klaszcz*"
- PER_ban_gas_sales_to_turkey: "Ban on Gas sales to Turkey"
- PER_ban_gas_sales_to_turkey_desc: "Turkey does not deserve the gas we produce! We should ban them from purchasing it from our markets and pipelines!"
+ PER_ban_gas_sales_to_turkey: "Zakaz sprzedaży gazu do Turcji"
+ PER_ban_gas_sales_to_turkey_desc: "Turcja nie zasługuje na gaz, który produkujemy! Powinniśmy zakazać im zakupu tego produktu na naszych rynkach i rurociągach!"
  PER_denounce_turkey_in_medias: "Potępiaj Turcję w mediach"
  PER_denounce_turkey_in_medias_desc: "Będziemy dzielić się z Turcją tym wspaniałym tweetem: Turcja, bardziej jak… Nie!"
  PER_start_the_islamic_propaganda: "Rozpocznij islamską propagandę"
@@ -2497,7 +2497,7 @@
  PER_will_piss_off_MEK_TT: "Ta opcja może spowodować, że §HMEK§! do §HRevolt§!"
  MEK_unbanned_TT: "Will §Hunban§! §HMEK§!"
  PER_idea_increased_immigration: "Afghan Migrant Influx"
- PER_anti_immigration_policies_idea: "Restricting Afghan Migrations"
+ PER_anti_immigration_policies_idea: "Ograniczanie migracji afgańskich"
  PER_migrant_workers: "Wizy pracownicze"
  PER_migrant_workers_desc: "Zaczęliśmy rozdawać wizy pracownicze większej liczbie osób, które poprzez ciężką pracę chcą pomóc ulepszyć nasz naród."
  full_control_of_hormuz: "Władze Cieśniny Ormuz"
@@ -4240,10 +4240,10 @@
  iran_md.244.d: "Na początku tygodnia delegaci rządu irańskiego przesłali nam bardzo ostro sformułowany list w sprawie schwytania rybaków. Przejęliśmy z tych statków kilka naprawdę dobrych aktywów i niektórzy członkowie naszego rządu sugerują, żebyśmy je zatrzymali."
  iran_md.244.a: "Możemy je po prostu zignorować"
  iran_md.244.b: "Dobra, wypuść rybaków i ich majątek"
- iran_md.245.t: "Influx of Afghan Migrants"
- iran_md.245.d: "As a result of the devestating conflict currently raging in Afghanistan, many people have decided to flee their homes and make a daring attempt to flee into Iran. As a result, our infrastructure in the Eastern regions have come under stress, and some people within our nation are less accepting of foreigners entering Iran, even if its for refuge."
- iran_md.245.a: "They are welcome here"
- iran_md.245.b: "Iran is full, sorry"
+ iran_md.245.t: "Napływ migrantów z Afganistanu"
+ iran_md.245.d: "W wyniku wyniszczającego konfliktu szalejącego obecnie w Afganistanie wiele osób zdecydowało się opuścić swoje domy i podjąć śmiałą próbę ucieczki do Iranu. W rezultacie nasza infrastruktura we wschodnich regionach znalazła się pod presją, a niektórzy ludzie w naszym kraju mniej akceptują obcokrajowców przybywających do Iranu, nawet jeśli jest to schronienie."
+ iran_md.245.a: "Są tu mile widziani"
+ iran_md.245.b: "Iran jest pełny, przepraszam"
  iran_md.25.t: "Zwolennicy Pahlavi organizują protesty"
  iran_md.25.d: "Zwolennicy księcia koronnego Rezy Pahlaviego rozpoczęli protesty w całym kraju. Wzywają do przywrócenia monarchii konstytucyjnej z pewnym poziomem kontroli przyznanym szachowi. Nasza partia była historycznie bardzo blisko powiązana z dynastią Pahlavi, ale miało to miejsce dopiero przed przyznaniem nam władzy."
  iran_md.25.a: "Nie, przyniesie nam to więcej szkody niż pożytku"
