--- a/localisation/polish/MD_focus_SOV_l_polish.yml
+++ b/localisation/polish/MD_focus_SOV_l_polish.yml
@@ -4740,7 +4740,7 @@
  SOV_KHM_separ_tt: "§RSeparatyzm§! w §Y[KHM.GetNameWithFlag]§!: §Y[?KHM.subjectinped]§!%"
  SOV_YAM_separ_tt: "§RSeparatyzm§! w §Y[YAM.GetNameWithFlag]§!: §Y[?YAM.subjectinped]§!%"
  SUB_separ_tt: "§YSubject§! will §Rrefuse§! to obey the federal government"
- SUB_campaign_prepare_tt: "Make sure your §Ysubjects§! have brigades of soldiers"
+ SUB_campaign_prepare_tt: "Upewnij się, że Twoje §Ypodmioty§! mają brygady żołnierzy"
  SUB_separ_caucas_tt: "[SOV_CHE_separat]\n[SOV_KBK_separat]\n[SOV_ING_separat]\n[SOV_ADY_separat]\n[SOV_DAG_separat]\n[SOV_KCC_separat]\n"
  SUB_separ_caucas_output: "§YKaukaz§!"
  SUB_separ_povoljie_tt: "[SOV_TAT_separat]\n[SOV_BSH_separat]\n[SOV_CHU_separat]\n[SOV_MEL_separat]\n[SOV_MOV_separat]\n[SOV_UDM_separat]\n"
