--- a/localisation/polish/MD_scripted_diplomatic_actions_l_polish.yml
+++ b/localisation/polish/MD_scripted_diplomatic_actions_l_polish.yml
@@ -157,13 +157,13 @@
  REVOKE_CIV_COM_ACCESS_ACCEPTED_DESC: "Odbierają dostęp do cywilnego systemu łączności satelitarnej."
  REQUEST_MIL_SPY_ACCESS_TITLE: "Dostęp do wojskowego SPYSAT"
  REQUEST_MIL_SPY_ACCESS_ACTION_DESC: "Poproś o dostęp do ich wojskowego Systemu Satelitarnego Rozpoznania."
- REQUEST_MIL_SPY_ACCESS_LOC: "Send Military SPYSAT Access Request"
+ REQUEST_MIL_SPY_ACCESS_LOC: "Wyślij prośbę o dostęp do wojskowego SPYSAT"
  REQUEST_MIL_SPY_ACCESS_RECIEVER_LOC: "Proszą o dostęp do naszego wojskowego Systemu Satelitów Rozpoznawczych"
  REQUEST_MIL_SPY_ACCESS_ACCEPTED_TITLE: "Dostęp przyznany!"
  REQUEST_MIL_SPY_ACCESS_ACCEPTED_DESC: "Będziemy korzystać z ich wojskowego systemu satelitów rozpoznawczych."
  REQUEST_MIL_SPY_ACCESS_REJECTED_TITLE: "Brak dostępu!"
  REQUEST_MIL_SPY_ACCESS_REJECTED_DESC: "Odmówili nam dostępu do wojskowego systemu satelitarno-rozpoznawczego."
- REQUEST_MIL_SPY_ACCESS_SELECTABLE_TT: "§YMilitary SPYSAT System Level§! of [PREV.GetNameWithFlag] must be greater than zero and at least greater or equal to the level of [ROOT.GetNameWithFlag]."
+ REQUEST_MIL_SPY_ACCESS_SELECTABLE_TT: "§YMilitarny poziom systemu SPYSAT§! [PREV.GetNameWithFlag] musi być większa od zera i co najmniej większa lub równa poziomowi [ROOT.GetNameWithFlag]."
  OFFER_MIL_SPY_ACCESS_TITLE: "Zaoferuj wojskowy dostęp do SPYSAT"
  OFFER_MIL_SPY_ACCESS_ACTION_DESC: "Zapewnij dostęp do naszego wojskowego systemu rozpoznania satelitarnego."
  OFFER_MIL_SPY_ACCESS_LOC: "Wyślij ofertę dostępu do SPYSAT dla wojska"
@@ -172,14 +172,14 @@
  OFFER_MIL_SPY_ACCESS_ACCEPTED_DESC: "Skorzystają oni z naszego wojskowego systemu satelitarnego rozpoznania."
  OFFER_MIL_SPY_ACCESS_REJECTED_TITLE: "Oferta odrzucona"
  OFFER_MIL_SPY_ACCESS_REJECTED_DESC: "Odrzucili naszą ofertę dostępu do naszego wojskowego systemu satelitarnego rozpoznania."
- OFFER_MIL_SPY_ACCESS_SELECTABLE_TT: "§YMilitary SPYSAT System Level§! of [ROOT.GetNameWithFlag] must be greater than zero and at least greater or equal to the level of [PREV.GetNameWithFlag]."
- REVOKE_MIL_SPY_ACCESS_TITLE: "Revoke Military SPYSAT Access"
- REVOKE_MIL_SPY_ACCESS_ACTION_DESC: "Revoke access to our military Reconnaissance Satellite System."
- REVOKE_MIL_SPY_ACCESS_LOC: "Send Military SPYSAT Access Revoke"
- REVOKE_MIL_SPY_ACCESS_RECIEVER_LOC: "They are revoking the access to their military Reconnaissance Satellite System."
+ OFFER_MIL_SPY_ACCESS_SELECTABLE_TT: "§YMilitarny poziom systemu SPYSAT§! [ROOT.GetNameWithFlag] musi być większa od zera i co najmniej większa lub równa poziomowi [PREV.GetNameWithFlag]."
+ REVOKE_MIL_SPY_ACCESS_TITLE: "Odbierz wojskowy dostęp do SPYSAT"
+ REVOKE_MIL_SPY_ACCESS_ACTION_DESC: "Odbierz dostęp do naszego wojskowego systemu satelitarnego rozpoznania."
+ REVOKE_MIL_SPY_ACCESS_LOC: "Wyślij wycofanie dostępu do wojskowego SPYSAT"
+ REVOKE_MIL_SPY_ACCESS_RECIEVER_LOC: "Odwołują dostęp do swojego wojskowego systemu satelitarnego rozpoznania."
  REVOKE_MIL_SPY_ACCESS_ACCEPTED_TITLE: "Anuluj dostęp do wojskowego systemu SPYSAT"
- REVOKE_MIL_SPY_ACCESS_ACCEPTED_DESC: "They are revoking the access to their military Reconnaissance Satellite System."
- REQUEST_CIV_SPY_ACCESS_TITLE: "Civilian SPYSAT Access"
+ REVOKE_MIL_SPY_ACCESS_ACCEPTED_DESC: "Odwołują dostęp do swojego wojskowego systemu satelitarnego rozpoznania."
+ REQUEST_CIV_SPY_ACCESS_TITLE: "Cywilny dostęp do SPYSATU"
  REQUEST_CIV_SPY_ACCESS_ACTION_DESC: "Poproś o dostęp do ich cywilnego Systemu Satelitarnego Rozpoznania."
  REQUEST_CIV_SPY_ACCESS_LOC: "Wyślij cywilną prośbę o dostęp do SPYSAT"
  REQUEST_CIV_SPY_ACCESS_RECIEVER_LOC: "Proszą o dostęp do naszego cywilnego Systemu Satelitów Rozpoznawczych."
