--- a/localisation/russian/MD_defence_companies_l_russian.yml
+++ b/localisation/russian/MD_defence_companies_l_russian.yml
@@ -50,7 +50,7 @@
  CZE_vop_tank_manufacturer: "VOP"
  DEN_falck_schmidt_tank_manufacturer: "Falck-Schmidt"
  DEN_falck_schmidt_materiel_manufacturer: "Falck-Schmidt"
- DEN_naval_manufacturer_maersk: "Mærsk"
+ DEN_naval_manufacturer_maersk: "Мерск"
  DEN_defence_skandinavisk_aero_industri: "Skandinavisk Aero Industri"
  EGY_kader_factory_tank_manufacturer: "Kader Factory"
  EGY_kader_factory_materiel_manufacturer: "Kader Factory"
