--- a/localisation/russian/MD_focus_ARM_l_russian.yml
+++ b/localisation/russian/MD_focus_ARM_l_russian.yml
@@ -1551,16 +1551,6 @@
  AZE_karabakh_defeat_desc: "Поражение в войне 90-х годов стало больной раной для нашего народа. Азербайджанцы жаждут реванша, чтобы вернуть свои исторические земли, а также вернуть тысячи беженцев в свои дома"
  AZE_karabakh_revanchism: "Карабахский реваншизм"
  AZE_karabakh_revanchism_desc: "Азербайджанский народ, проигравший Арцахскую войну при большой международной поддержке, остался униженным на международной арене, а народ, ослепленный неудачей, все больше склоняется к национализму и вступлению в ряды вооруженных сил."
- ARM_huge_unemployment_5: "Огромная безработица"
- ARM_huge_unemployment_5_desc: "Более трети населения безработные. Около половины - бедные. Чтобы экономика развивалась, необходимо повысить благосостояние населения."
- ARM_huge_unemployment_4: "Очень высокий уровень безработицы"
- ARM_huge_unemployment_4_desc: "Около трети населения не имеет работы. Хотя правительство начало работу по улучшению ситуации, до принятия окончательного решения еще далеко."
- ARM_huge_unemployment_3: "Высокий уровень безработицы"
- ARM_huge_unemployment_3_desc: "Борьба с безработицей сдвинулась с мертвой точки. Хотя эта проблема все еще беспокоит население, результаты изменений уже видны."
- ARM_huge_unemployment_2: "Средний уровень безработицы"
- ARM_huge_unemployment_2_desc: "Безработица составляет 10%. Кризис, вызванный распадом СССР, постепенно начинает преодолеваться."
- ARM_huge_unemployment_1: "Низкий уровень безработицы"
- ARM_huge_unemployment_1_desc: "Безработица почти побеждена. Экономика наконец-то может развиваться, благосостояние населения начинает улучшаться."
  ARM_high_emigration_5: "Высокий уровень эмиграции"
  ARM_high_emigration_5_desc: "С распадом СССР и ухудшением экономической ситуации многие страны СНГ стали заложниками возросшей внешней миграции. В сегодняшних реалиях Армении грозит вымирание, чего нельзя сказать о ее восточном соседе и главном политическом враге. Решение демографического вопроса должно стать главной повесткой армянской политики"
  ARM_high_emigration_4: "Значительный уровень эмиграции"
@@ -2034,8 +2024,6 @@
  ARM_idea_eacu_cooperation_desc: "Евразийский таможенный союз (первоначально Евразийское экономическое сообщество) способствует развитию экономических связей между большинством постсоветских государств. Союз устанавливает единый внешний тариф на все товары, поступающие в него, и выступает как единое целое при заключении торговых сделок и проведении переговоров."
  ARM_idea_eacu_cooperation_2: "Комплексное сотрудничество ЕАСУ"
  ARM_idea_eacu_cooperation_2_desc: "Евразийский таможенный союз (первоначально Евразийское экономическое сообщество) способствует развитию экономических связей между большинством постсоветских государств. Союз устанавливает единый внешний тариф на все товары, поступающие в него, и выступает как единое целое при заключении торговых сделок и проведении переговоров."
- ARM_inner_network_idea: "Внутренняя сеть"
- ARM_inner_network_idea_desc: "Внутренняя сеть агентов и информаторов обеспечивает государственные интересы."
  ARM_idea_pro_farmers: "Про-фермеры"
  ARM_idea_pro_farmers_desc: "Поскольку мы постепенно отходим от аграрного общества, важно быть сторонником фермерства."
  ARM_idea_agrotech: "Агротех"
@@ -2046,3 +2034,5 @@
  ARM_renewable_energy_focus3: "Возобновляемая энергия"
  ARM_militarism: "Милитаризм"
  ARM_militarism_desc: "Милитаризм — это вера или желание правительства или народа, что государство должно поддерживать сильный военный потенциал и агрессивно использовать его для расширения национальных интересов и/или ценностей. Это может также означать прославление армии и идеалов профессионального военного класса, а также преобладание вооруженных сил в управлении или политике государства."
+ ARM_internal_network_idea: "Внутренняя сеть"
+ ARM_internal_network_idea_desc: "Внутренняя сеть агентов и информаторов обеспечивает интересы государства."
