--- a/localisation/russian/MD_focus_DEN_l_russian.yml
+++ b/localisation/russian/MD_focus_DEN_l_russian.yml
@@ -1,6 +1,6 @@
 ﻿l_russian:
  denmark_focus: "Датское дерево фокусов"
- DEN_army: "Hæren"
+ DEN_army: "Армия"
  DEN_army_desc: "Королевская Датская армия - это сухопутная армия нашей страны и жизненно важная часть нашей армии в целом. Мы должны искать пути расширения ее возможностей."
  DEN_expand_barracks: "Расширить казармы"
  DEN_expand_barracks_desc: "Вместимость наших нынешних казарм прискорбно недостаточна и должна быть расширена, чтобы вместить наш постоянно растущий поток храбрых новобранцев!"
@@ -33,7 +33,7 @@
  DEN_establish_OPLOG_KOR_desc: "OPLOG KOR, сокращенно от оперативного материально-технического обеспечения Korsør - это местная вспомогательная инфраструктура для нашей военно-морской базы в Корсере, FLS KOR. Военно-морская база является домом для значительной части нашего флота, и по мере его расширения все большее давление будет неизменно оказываться на вспомогательную инфраструктуру. Таким образом, мы должны сделать расширение OPLOG-а приоритетом!"
  DEN_establish_OPLOG_FRH: "Основать OPLOG FRH"
  DEN_establish_OPLOG_FRH_desc: "OPLOG KOR уже развернуто, пришло время расширить инфраструктуру другой нашей крупной военно-морской базы во Фредериксхавне."
- DEN_maersk: "Mærsk"
+ DEN_maersk: "Мерск"
  DEN_maersk_desc: "Mærsk это огромная датская судоходная компания, основанная в 1904 году, мы реквизируем их производство и верфи для военно-морского флота"
  DEN_coastal_forts: "Крепость Дания"
  DEN_coastal_forts_desc: "В связи с ростом напряженности в мире мы сочли необходимым построить бункеры и защитные сооружения для обеспечения безопасности наших портов в случае морского вторжения"
@@ -792,21 +792,21 @@
  DEN_vestas_desc: "Vestas - 4-я по величине компания Дании, основанная в 1898 году как кузнечное дело, она не превратилась в глобального производителя ветряных мельниц, которым является сегодня, до нефтяного кризиса 1970-х годов"
  DEN_skandinavisk_aero_industri: "Скандинавская авиационная промышленность"
  DEN_skandinavisk_aero_industri_desc: "Skandinavisk Aero Industri была недолговечной датской компанией, которая занималась производством самолетов (1937-1954). После того, как мы приобрели статус региональной державы, пришло время найти способ производить собственные самолеты и возобновить эту отрасль"
- DEN_Expand_Maersk: "Расширение A.P. Møller-Mærsk Group"
+ DEN_Expand_Maersk: "Расширить группу компаний AP Мёллер-Марск"
  DEN_Expand_Maersk_desc: "Дания приступает к реализации амбициозной стратегии по расширению глобального присутствия и влияния A.P. Møller-Mærsk Group, ведущего транснационального конгломерата. Опираясь на свой опыт в области судоходства, логистики и энергетики, Дания стремится укрепить позиции компании как ключевого игрока на международном рынке, способствуя устойчивому росту и инновациям."
- DEN_Maersk_nortsea_port: "Mærsk Northsea Port"
+ DEN_Maersk_nortsea_port: "Порт Мерск Северное море"
  DEN_Maersk_nortsea_port_desc: "Дания уделяет особое внимание развитию и расширению порта Мерск в Северном море, стратегически расположенного для облегчения морской торговли и логистических операций в регионе Северного моря. Инвестируя в инфраструктуру, технологии и связь, Дания стремится повысить пропускную способность, эффективность и конкурентоспособность порта, способствуя экономическому развитию и процветанию прилегающих территорий."
- DEN_Maersk_American_port: "Mærsk America"
+ DEN_Maersk_American_port: "Мерск Америка"
  DEN_Maersk_American_port_desc: "Дания ищет возможности для расширения присутствия Mærsk America, используя огромный потенциал американского рынка и укрепляя торговые связи между Данией и Соединенными Штатами. Посредством стратегических инвестиций, партнерства и инициатив по расширению рынка Дания стремится позиционировать Mærsk America как ведущего игрока в секторах морского судоходства, логистики и транспорта по всей Северной Америке."
- DEN_Maersk_Asian_port: "Mærsk Asian Port"
+ DEN_Maersk_Asian_port: "Мерск Азиатский порт"
  DEN_Maersk_Asian_port_desc: "Дания уделяет особое внимание стратегическому развитию и росту азиатского порта Мерск, извлекая выгоду из динамичного экономического ландшафта и растущего спроса на морские услуги в Азиатско-Тихоокеанском регионе. Инвестируя в портовую инфраструктуру, цифровизацию и клиентоориентированные решения, Дания стремится превратить азиатский порт Mærsk в главные ворота для торговли и коммерции в Азии, способствуя региональной связности и процветанию."
- DEN_Maersk_Indian_port: "Mærsk Port of India"
+ DEN_Maersk_Indian_port: "Мерск Порт Индии"
  DEN_Maersk_Indian_port_desc: "Дания уделяет приоритетное внимание расширению и модернизации индийского порта Мерск, используя стратегическое расположение Индии и потенциал развивающегося рынка. Посредством целевых инвестиций, партнерства и инициатив по наращиванию потенциала Дания стремится повысить эффективность, связность и конкурентоспособность порта, способствуя торговым потокам и экономическому росту на Индийском субконтиненте."
  DEN_Expand_Maersk_investments: "Инвестиции в Mærsk"
  DEN_Expand_Maersk_investments_desc: "Дания активно ищет инвестиционные возможности и стратегические партнерства для укрепления Mærsk, диверсификации потоков доходов и создания долгосрочной стоимости. Выявляя перспективные отрасли, рынки и предприятия, Дания стремится оптимизировать доходность, снизить риски и поддержать устойчивый рост и развитие инвестиционного портфеля Mærsk Group."
  DEN_Expand_Maersk_Logistics: "Логистика Mærsk"
  DEN_Expand_Maersk_Logistics_desc: "Дания фокусируется на оптимизации и расширении логистической сети Mærsk, предлагая комплексные решения для цепи поставок, которые отвечают меняющимся потребностям глобальных клиентов. Благодаря цифровизации, инновациям и операционному совершенству, Дания стремится повысить эффективность, надежность и гибкость услуг Mærsk, предоставляя решения с добавленной стоимостью, которые способствуют конкурентоспособности и росту."
- DEN_Expand_Maersk_Supply_service: "Mærsk Supply Service"
+ DEN_Expand_Maersk_Supply_service: "Мерск Служба снабжения"
  DEN_Expand_Maersk_Supply_service_desc: "Дания укрепляет возможности и присутствие Mærsk Supply Service, ведущего поставщика морской поддержки и морских услуг. Используя свой опыт, активы флота и операционное превосходство, Дания стремится расширить рыночную долю Mærsk Supply Service, диверсифицировать предложения услуг и извлечь выгоду из новых возможностей в секторах морской энергетики и морского судоходства."
  DEN_Maersk_Global_player: "Глобализация Mærsk"
  DEN_Maersk_Global_player_desc: "Дания возглавляет усилия по укреплению глобального присутствия и влияния компании Mærsk на различных рынках и в различных отраслях. Уделяя особое внимание расширению деятельности, развитию партнерских отношений и использованию опыта компании Mærsk, Дания стремится сделать Mærsk Global символом датских инноваций, передового опыта и лидерства на международной арене."
@@ -890,7 +890,7 @@
  DEN_US_Tanks_desc: "Изучая возможности оперативной совместимости и общности с союзниками по НАТО, правительство Дании рассматривает возможность закупки основных боевых танков M1A2 Abrams в Соединенных Штатах. Ведутся переговоры с компанией General Dynamics о приобретении танков Abrams, что позволит усилить датский бронетанковый потенциал за счет проверенных боевых качеств."
  DEN_German_tanks: "Leopard 2A7"
  DEN_German_tanks_desc: "В рамках своего обязательства по поддержанию современного и боеспособного бронетанкового парка правительство Дании изучает варианты приобретения новейшей версии основного боевого танка Leopard 2. С компанией Krauss-Maffei Wegmann заключаются контракты на закупку танков Leopard 2A7+, оснащенных передовыми технологиями и усовершенствованными боевыми средствами."
- DEN_Challenger: "Challenger 3"
+ DEN_Challenger: "Челленджер 3"
  DEN_Challenger_desc: "Стремясь диверсифицировать свой бронетанковый потенциал и изучить новые технологические решения, правительство Дании оценивает британский основной боевой танк Challenger 3 на предмет возможного приобретения. Сотрудничество с BAE Systems приводит к переговорам о закупке танков Challenger 3, обеспечивающих датские бронетанковые войска грозной и универсальной платформой."
  DEN_Tank_kommando: "Танковое командование"
  DEN_Tank_kommando_desc: "Признавая важность специализированных бронетанковых подразделений в современной войне, правительство Дании учреждает танковое командование, которое должно служить головной частью бронетанковых операций датской армии. Состоящая из высококвалифицированных танковых экипажей и поддерживаемая пехотой и разведывательными подразделениями, коммандование специализируется на наступательных маневрах, тактике ведения бронетанковой войны и комбинированных операциях, обеспечивая способность Дании доминировать на поле боя."
@@ -1198,7 +1198,7 @@
  DEN_idea_schultz_larsen: "Шульц Ларсен"
  DEN_idea_schultz_larsen_desc: "Компания Schultz Larsen, известная своим огнестрельным оружием и винтовками, продолжает оставаться краеугольным камнем обрабатывающей промышленности Дании, поставляя качественную продукцию как внутри страны, так и за рубежом."
  DEN_idea_DISA: "DISA"
- DEN_idea_DISA_desc: "DISA, Denmark's leading IT service provider, plays a crucial role in modernizing the country's digital infrastructure and ensuring cybersecurity measures are robust and effective."
+ DEN_idea_DISA_desc: "DISA, ведущий поставщик ИТ-услуг в Дании, играет решающую роль в модернизации цифровой инфраструктуры страны и обеспечении надежности и эффективности мер кибербезопасности."
  DEN_idea_conservative: "Консервативное общество"
  DEN_idea_conservative_desc: "Дания сохраняет свой статус консервативного общества, ценя традиции, семью и стабильность, одновременно осторожно проводя социальные и культурные изменения."
  DEN_idea_multiculturalism: "Жилищные проекты"
@@ -1305,9 +1305,9 @@
  DEN_Political_Capital_Injection_desc: "Вливание политического капитала означает стремление Дании предоставить политический капитал профсоюзам, тем самым обеспечивая им большее влияние и доступ в политической сфере."
  DEN_Anarchism1: "Датский анархизм"
  DEN_Anarchism1_desc: "Датский анархизм представляет собой смелое видение организации общества, основанное на принципах автономии, добровольного объединения и децентрализованного принятия решений. Эта идеология выступает за отказ от иерархических структур, включая государство, в пользу низовой демократии и прямого действия. Датский анархизм стремится предоставить отдельным людям и сообществам возможность свободно управлять собой, способствуя созданию общества, основанного на взаимопомощи, солидарности и коллективной ответственности."
- DEN_idea_Visitdenmark: "VisitDenmark"
+ DEN_idea_Visitdenmark: "Посетить Данию"
  DEN_idea_Visitdenmark_desc: "Благодаря стратегическим маркетинговым кампаниям, партнерству с заинтересованными сторонами туристической индустрии и инновационным рекламным мероприятиям VisitDenmark стремится привлечь посетителей со всего мира, стимулируя экономический рост и укрепляя репутацию Дании как ведущего туристического направления."
- DEN_Maersk1: "Møller-Mærsk Group"
+ DEN_Maersk1: "Группа Мёллер-Марск"
  DEN_Maersk1_desc: "Основанная в 1904 году А.П. Мёллером и капитаном Питером Мёрском Мёллером, компания Mærsk превратилась в одну из крупнейших в мире судоходных и логистических компаний. Имея представительства в более чем 130 странах и флот из более чем 700 судов, Mærsk работает в различных секторах, включая контейнерные перевозки, терминальные операции, разведку нефти и газа, а также логистические услуги."
  DEN_decision_Investments_Global: "Инвестиции в глобальные порты"
  DEN_decision_Investments_Global_desc: "В рамках стратегической программы Дании по расширению глобальных логистических сетей мы инвестируем в мировые порты. Эти инвестиции позволят укрепить портовую инфраструктуру, повысить эффективность обработки грузов и установить ключевые международные партнерские отношения. Укрепляя потенциал портов, мы стремимся открыть новые возможности для торговли, стимулировать долгосрочную финансовую выгоду и укрепить роль Дании в мировой экономике."
@@ -1349,7 +1349,7 @@
  DEN_local_renewable_investment_decision: "Инициатива по возобновляемому строительству в §Y[FROM.GetName]§!"
  DEN_local_renewable_investment_decision_desc: "[FROM.GetName] выразил заинтересованность в размещении на территории региона возобновляемых источников энергии. Жители региона не согласны с решением правительства разместить её там. Фонд может выделить этому району средства на строительство, но это будет непопулярно для центрального правительства."
  DEN_urban_development_funds_greater_than_TT: "Текущие фонды развития > $$5 млрд (Текущий: [?DEN_urban_development_fund_value|+]b)"
- DEN_increased_tourism_gain_tt: "Tourism"
+ DEN_increased_tourism_gain_tt: "Туризм"
  DEN_generic_danish_political_decisions_category: "Государственное управление Дании"
  DEN_generic_danish_political_decisions_category_desc: "В Дании существует множество политик, и поэтому некоторые из них могут быть изменены по собственному усмотрению."
  DEN_rollback_flexicurity_model_improvements_decision: "Свернуть расширение модели гибкой безопасности"
@@ -1403,7 +1403,7 @@
  DEN_Bad_Bank_decision_desc: "Дания применяет прагматичный подход к сокращению долга, выделяя скромные инвестиции для снижения национального долга и одновременно расширяя международные инвестиции. Балансируя между фискальной ответственностью и стратегическими инвестициями, Дания стремится улучшить финансовую стабильность, повысить конкурентоспособность экономики и привлечь иностранный капитал для устойчивого роста."
  DEN_Bad_Bank_EZB_decision: "Смелый план экономического стимулирования"
  DEN_Bad_Bank_EZB_decision_desc: "Дания приступает к реализации смелого плана экономического стимулирования, выделяя значительные ресурсы на сокращение государственного долга и увеличение международных инвестиций. Вливая капитал в стратегические отрасли и инфраструктурные проекты, Дания стремится оживить экономику, создать рабочие места и привлечь иностранных инвесторов, позиционируя себя в качестве динамичного центра инноваций и роста на мировом рынке."
- DEN_visitdenmark_category: "VisitDenmark"
+ DEN_visitdenmark_category: "Посетить Данию"
  DEN_visitdenmark_category_desc: "Создание VisitDenmark представляет собой согласованные усилия датского правительства по развитию туризма и демонстрации богатого культурного наследия страны, природных красот и оживленной городской жизни всему миру."
  DEN_TV_campain: "Запустить телевизионную кампанию"
  DEN_Print_campain: "Запустить кампанию в печатных СМИ"
@@ -1583,35 +1583,35 @@
  DEN_Culture_army_leader_cost_factor: "Стоимость командующего армией"
  DEN_Culture_conversion_cost_civ_to_mil_factor: "Стоимость конверсии гражданской фабрики в военный завод"
  DEN_Culture_army_core_defence_factor: "Защита дивизии на национальной территории"
- DEN_Culture_nationalist_drift: "Nationalistic Outloof Drift"
- DEN_Culture_justify_war_goal_time: "Justify War Goal Time"
- DEN_Culture_country_productivity_growth_modifier: "Danish Productivity Growth"
+ DEN_Culture_nationalist_drift: "Националистический аутлуд-дрифт"
+ DEN_Culture_justify_war_goal_time: "Время на оправдание цели войны"
+ DEN_Culture_country_productivity_growth_modifier: "Рост производительности в Дании"
  DEN_Industrial_modifier: "Датская промышленность"
- DEN_production_speed_buildings_factor: "Construction SPeed"
- DEN_office_park_income_tax_modifier: "Office Tax Income"
- DEN_receiving_investment_cost_modifier: "Receiving Investments Costs"
- DEN_return_on_investment_modifier: "Return On Investments"
- DEN_local_resources_factor: "Local Resources"
- DEN_production_factory_efficiency_gain_factor: "Production Efficiency Gain"
- DEN_research_speed_factor: "Research Speed"
- DEN_tax_gain_multiplier_modifier: "Tax Income"
+ DEN_production_speed_buildings_factor: "Скорость строительства"
+ DEN_office_park_income_tax_modifier: "Налоговые доходы офиса"
+ DEN_receiving_investment_cost_modifier: "Получение инвестиционных затрат"
+ DEN_return_on_investment_modifier: "Возврат инвестиций"
+ DEN_local_resources_factor: "Местные ресурсы"
+ DEN_production_factory_efficiency_gain_factor: "Повышение эффективности производства"
+ DEN_research_speed_factor: "Скорость исследования"
+ DEN_tax_gain_multiplier_modifier: "Налоговые доходы"
  DEN_the_State: "Королевство Дания"
- DEN_bureaucracy_cost_multiplier_modifier_var: "Bureaucracy Costs"
- DEN_police_cost_multiplier_modifier_var: "Police Costs"
- DEN_education_cost_multiplier_modifier_var: "Education Costs"
- DEN_health_cost_multiplier_modifier_var: "Healthcare Costs"
- DEN_social_cost_multiplier_modifier_var: "Welfare Costs"
- DEN_offices_contruction_speed: "Office Construction Speed"
- DEN_arms_factory_contruction_speed: "Military Factory Construction SPeed"
- DEN_civ_construction_speed: "Civilian Factory Construction Speed"
- DEN_population_energy_consumption: "Population Energy Consumption"
- DEN_civ_factory_workforce: "Civilian Factory Workers Needed"
- DEN_mil_factory_workforce: "Military Factory Workers Needed"
- DEN_office_workforce: "Office Workers Needed"
+ DEN_bureaucracy_cost_multiplier_modifier_var: "Бюрократические издержки"
+ DEN_police_cost_multiplier_modifier_var: "Расходы на полицию"
+ DEN_education_cost_multiplier_modifier_var: "Затраты на образование"
+ DEN_health_cost_multiplier_modifier_var: "Расходы на здравоохранение"
+ DEN_social_cost_multiplier_modifier_var: "Расходы на социальное обеспечение"
+ DEN_offices_contruction_speed: "Скорость строительства офисов"
+ DEN_arms_factory_contruction_speed: "Скорость строительства военного завода"
+ DEN_civ_construction_speed: "Скорость строительства гражданского завода"
+ DEN_population_energy_consumption: "Энергопотребление населения"
+ DEN_civ_factory_workforce: "Требуются рабочие на заводы-граждане"
+ DEN_mil_factory_workforce: "Требуются рабочие на военный завод"
+ DEN_office_workforce: "Требуются офисные работники"
  DEN_stability_factor: "Стабильность"
  DEN_monthly_population: "Ежемесячный прирост населения"
  DEN_DISA_materiel_manufacturer: "DISA"
- DEN_Composhield_utility_vehicle_manufacturer: "Composhield"
+ DEN_Composhield_utility_vehicle_manufacturer: "Компошилд"
  DEN_Odense_Staalskibsvaerft: "Odense Staalskibsvaerft"
  DEN_Svendborg_skibsvaerft: "Svendborg Skibsvaerft"
  DEN_Terma_AS_aircraft_manufacturer: "Terma AS"
