--- a/localisation/russian/MD_focus_NOR_l_russian.yml
+++ b/localisation/russian/MD_focus_NOR_l_russian.yml
@@ -1,5 +1,5 @@
 ﻿l_russian:
- norway_focus: "Norway Focus Tree"
+ norway_focus: "Дерево фокусов Норвегии"
  NOR_the_norwegian_economy: "Норвежская экономика"
  NOR_the_norwegian_economy_desc: "Норвежская экономика отличается своим разнообразием, ресурсами и многим другим. Мы должны изучить возможности развития нашей экономики, которые помогут нам вступить в новое тысячелетие и вывести Норвегию на путь величия."
  NOR_north_sea_oil: "Нефть северного моря"
@@ -343,7 +343,7 @@
  NOR_modernize_bergan_line_desc: "Бергенская железная дорога - это живописная железнодорожная линия стандартной колеи протяженностью 231 милю (371 километр), которая обеспечивает необходимую транспортную доступность и гибкость в нашей стране."
  NOR_dovre_line: "Линия Довре"
  NOR_dovre_line_desc: "Линия Довре — это основная линия протяженностью 484 км, задача которой — эффективная доставка грузов по всей нашей стране."
- NOR_if_we_accept_TT: "§HEffects If We Accept:§!"
+ NOR_if_we_accept_TT: "§HЭффекты, если мы примем:§!"
  NOR_if_they_aceept_TT: "§HЕсли они согласятся:§!"
  NOR_higher_relations_more_likely_TT: "Они будут §Hболее склонны§! к согласию если:\n- их §Hмнение§! о нас как минимум §H45§!"
  NOR_UK_AGREED: "[ENG.GetFlag] §H[ENG.GetName]§! согласилась на нашу просьбу"
