--- a/localisation/simp_chinese/MD_focus_ARM_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_ARM_l_simp_chinese.yml
@@ -1455,16 +1455,6 @@
  AZE_karabakh_defeat_desc: "90年代战争的失败对我们国家来说是一个巨大的创伤。阿塞拜疆人渴望复仇，以归还他们的历史土地，并让数千名难民返回家园"
  AZE_karabakh_revanchism: "卡拉巴赫复仇主义"
  AZE_karabakh_revanchism_desc: "阿塞拜疆人民在国际社会的大力支持下输掉了阿尔扎赫战争，但在国际舞台上仍然蒙受耻辱，失败蒙蔽了双眼，越来越倾向于民族主义和加入武装部队。"
- ARM_huge_unemployment_5: "大规模失业"
- ARM_huge_unemployment_5_desc: "超过三分之一的人口失业。大约一半是穷人。经济要发展，就必须改善人民的福祉。"
- ARM_huge_unemployment_4: "极高失业率"
- ARM_huge_unemployment_4_desc: "大约三分之一的人口失业。尽管政府已经开始努力改善这种情况，但距离做出最终决定还有很长的路要走。"
- ARM_huge_unemployment_3: "高失业率"
- ARM_huge_unemployment_3_desc: "对抗失业的斗争已经开始。尽管这个问题仍然令人们担忧，但变化的结果已经显而易见。"
- ARM_huge_unemployment_2: "普通失业率"
- ARM_huge_unemployment_2_desc: "失业率为10%。苏联解体的危机正在慢慢开始克服。"
- ARM_huge_unemployment_1: "低失业"
- ARM_huge_unemployment_1_desc: "失业几乎被击败。 经济终于能发展起来，人民的福祉开始改善。"
  ARM_high_emigration_5: "高级别移民"
  ARM_high_emigration_5_desc: "随着苏联的解体和经济形势的恶化，许多独联体国家成为了外部移民增加的人质。 在当今的现实中，亚美尼亚面临着灭绝的威胁，而对于它的东部邻国和主要政治敌人来说，情况就更糟了。 人口问题的解决应成为亚美尼亚政坛的主要议程。"
  ARM_high_emigration_4: "大量的移民"
@@ -1595,7 +1585,7 @@
  ARM_cleaning_nomenclature_com: "清理命名规则"
  eastern_church_arm: "亚美尼亚使徒教会"
  eastern_church_arm_desc: "亚美尼亚使徒教会是世界上最古老的基督教教堂之一。据传说，亚美尼亚教会被称为“使徒教会”，因为其创始人是使徒犹达和巴多罗买，他们是亚美尼亚最早传播基督教的人。历史上，亚美尼亚使徒教会于301年由启蒙者格列高利创立，国王梯里达底三世将基督教定为国教。"
- eastern_church_eth: "埃塞俄比亚东正教教堂"
+ eastern_church_eth: "埃塞俄比亚东正教"
  eastern_church_eth_desc: "埃塞俄比亚东正教是古代东方（前卡尔西顿时期）教堂之一。 直到1959年，它都是一个自治教会，在规范上依赖于科普特教会，此后它获得了独立。 与其他古代东方教会一样，它承认三个普世大公会议，并宣扬米亚菲派基督论。 它有自己的埃塞俄比亚仪式，以及其他教会传统中所没有的特殊神职人员等级结构。"
  ARM_internal_putsch_decisions_cat: "内部整顿"
  ARM_begin_internal_rectification_TT: "§C将所有支持级别设置为0并开始纠正过程。§!"
@@ -1933,8 +1923,6 @@
  ARM_idea_eacu_cooperation_desc: "欧亚关税同盟(前身欧亚经济共同体)促进了大多数后苏联国家之间的经济联系。该联盟对所有进入该联盟的商品征收共同的对外关税，并作为一个单一实体在产生贸易协议和谈判时发挥作用。"
  ARM_idea_eacu_cooperation_2: "欧亚关税同盟一体化合作"
  ARM_idea_eacu_cooperation_2_desc: "欧亚关税同盟(前身欧亚经济共同体)促进了大多数后苏联国家之间的经济联系。该联盟对所有进入该联盟的商品征收共同的对外关税，并作为一个单一实体在产生贸易协议和谈判时发挥作用。"
- ARM_inner_network_idea: "内部网络"
- ARM_inner_network_idea_desc: "特工和线人的内部网络正在维护国家利益。"
  ARM_idea_pro_farmers: "亲农政策"
  ARM_idea_pro_farmers_desc: "随着我们慢慢脱离农业社会，支持农民仍然很重要。"
  ARM_idea_agrotech: "农业科技"
@@ -2046,3 +2034,5 @@
  ARM_nato_standards_desc: "我们可以要求北约不要向我们提供新型防空系统，而是相反，对我们现有的武器库进行现代化改造，以实现更大的兼容性和统一性。"
  ARM_militarism: "军国主义"
  ARM_militarism_desc: "军国主义是政府或人民的一种信念或愿望，即国家应保持强大的军事能力，并积极利用其来扩大国家利益和/或价值观。它也可能意味着对军队和职业军人阶层理想的赞美，以及武装部队在国家行政或政策中的主导地位。"
+ ARM_internal_network_idea: "内部网络"
+ ARM_internal_network_idea_desc: "特工和线人的内部网络正在维护国家利益。"
