--- a/localisation/braz_por/MD_focus_POL_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_POL_l_braz_por.yml
@@ -349,8 +349,6 @@
  POL_ally_industry_desc: "Identificamos algumas possibilidades de investimentos adicionais em nossos aliados. Isso pode nos fortalecer ainda mais."
  POL_ally_research: "Pesquisa de Aliados"
  POL_ally_research_desc: "Precisamos unir nossos esforços nas áreas científicas, isso certamente irá acelerar um processo."
- POL_economical_comitee: "Comitê Econômico"
- POL_economical_comitee_desc: "Precisamos rever a nossa situação e tomar medidas para regular a economia para garantir que ela funcione para servir a nação, não os globalistas."
  POL_mass_nationalization: "Nacionalização em massa"
  POL_mass_nationalization_desc: "Precisamos nacionalizar todas as grandes corporações e fábricas para garantir que trabalhem para servir o estado."
  POL_limited_nationalization: "Nacionalização Limitada"
@@ -371,16 +369,12 @@
  POL_develop_bio_fuel_desc: "Não dependeremos de potências globalistas, portanto exploraremos alternativas biológicas ao tão necessário combustível."
  POL_develop_metals: "Desenvolver a Indústria Metalúrgica"
  POL_develop_metals_desc: "A indústria metalúrgica é uma tradição em algumas áreas do nosso país. Não devemos abandoná-la, em vez disso, podemos realmente achar a expansão das minas muito útil."
- POL_social_comitee: "Comitê Social"
- POL_social_comitee_desc: "A vida social de alguns indivíduos tem de ser regulamentada, precisamos de salvar a nossa nação da agenda degenerativa do Ocidente."
  POL_set_state_religion: "Religião do Estado"
  POL_set_state_religion_desc: "O Cristianismo é um pilar da nossa sociedade. Só é certo se o definirmos como religião oficial."
  POL_ban_abortions: "Proibir abortos"
  POL_ban_abortions_desc: "Os abortos são um crime contra a humanidade, um crime contra a nossa nação. Eles deveriam ser proibidos."
  POL_promote_egalatarianism: "Promover o igualitarismo"
  POL_promote_egalatarianism_desc: "Se você é membro da nossa sociedade, você deve saber o que é compartilhar para um bem maior."
- POL_create_inner_network: "Criar rede interna"
- POL_create_inner_network_desc: "Uma rede de agentes e informantes irá garantir a nossa posição e ajudar a estabilizar a sociedade."
  POL_mandatory_patriotic_education: "Educação Patriótica Obrigatória"
  POL_mandatory_patriotic_education_desc: "A educação patriótica deve fazer parte da educação escolar. Devemos ensinar aos jovens a nossa gloriosa história."
  POL_paramilitary_organization: "Organizações Paramilitares"
@@ -1621,7 +1615,7 @@
  poland.88.d: "Depois do golpe fracassado, os comunistas conseguiram recuperar o apoio do exército, que foi criticado pelo líder da Nova Solidariedade, Lech Wałęsa. Manifestantes começaram a questionar a lealdade dos militares poloneses na Internet e diante de importantes prédios políticos e militares."
  poland.88.a: "Muito bem"
  poland.89.t: "Governo Rejeita Proposta Comunista"
- poland.89.d: "Os comunistas pediram ao governo para renunciar e entregar-lhes o poder. O presidente rejeitou a oferta e proibiu qualquer discussão sobre o assunto."
+ poland.89.d: "Os comunistas pediram ao governo que renunciasse e lhes entregasse o poder. O presidente rejeitou a oferta e proibiu qualquer pessoa de voltar ao assunto."
  poland.89.a: "É hora de opções mais radicais"
  poland.90.t: "O Governo Cede"
  poland.90.d: "O governo decidiu entregar o poder aos comunistas. Não se sabe o que forçou o governo a tomar essa decisão, mas certamente não foi voluntário."
@@ -2213,10 +2207,6 @@
  POL_political_violence_desc: "A violência política aumentou e o modo de vida normal é apenas uma memória."
  POL_reformed_ministry: "Ministério Reformado dos Negócios Estrangeiros"
  POL_reformed_ministry_desc: "O Ministério das Relações Exteriores foi redirecionado para servir aos interesses nacionais."
- POL_economical_comitee_idea: "Comitê Econômico"
- POL_economical_comitee_idea_desc: "O Comitê Econômico supervisiona a nacionalização da indústria e regula o mercado."
- POL_inner_network_idea: "Rede Interna"
- POL_inner_network_idea_desc: "A rede interna de agentes e informantes está protegendo os interesses do Estado."
  POL_paramilitary_organization_idea: "Grupos Paramilitares"
  POL_paramilitary_organization_idea_desc: "Vários grupos paramilitares ajudam a reforçar as fileiras do exército, se necessário."
  POL_military_youth: "Legião Juvenil"
@@ -2240,7 +2230,7 @@
  POL_civilian_focus: "Foco Civil"
  POL_civilian_focus_desc: "Muito é feito para garantir o melhor e mais tranquilo processo de construção em todas as escalas."
  POL_centralized_rule_idea: "Regra Centralizada"
- POL_centralized_rule_idea_desc: "Planos, ideias, pedidos, tudo vem dos comitês e organizações centralizadas."
+ POL_centralized_rule_idea_desc: "Planos, ideias, ordens, tudo vem de comitês e organizações centralizadas."
  POL_comm_agile_control: "Controle Ágil"
  POL_comm_agile_control_desc: "Uma quantidade considerável de autoridade foi delegada em níveis inferiores para garantir adaptabilidade."
  POL_comm_land_reform: "Reforma Agrária"
@@ -3452,3 +3442,13 @@
  POL_question_of_democratic_desc: "É possível cooperar com a democracia. Afinal, a social-democracia não é novidade. Manteremos boas relações com a NATO, o que garantirá a nossa segurança, e ao mesmo tempo implementaremos a ideia do socialismo."
  POL_mandatory_service: "Serviço obrigatório"
  POL_mandatory_service_desc: "No passado, o serviço militar era obrigatório. Pelo menos por alguns anos. Os jovens saberão como se comportar em caso de guerra e, mais importante, estarão preparados para defender a sua e a nossa pátria."
+ POL_economic_committee: "Comitê Econômico"
+ POL_economic_committee_desc: "Precisamos de rever a nossa situação e tomar medidas para regular a economia para garantir que funciona para servir a nação e não os globalistas."
+ POL_social_committee: "Comitê Social"
+ POL_social_committee_desc: "A vida social de alguns indivíduos tem de ser regulada, precisamos de salvar a nossa nação da agenda degenerativa do Ocidente."
+ POL_create_internal_network: "Criar rede interna"
+ POL_create_internal_network_desc: "Uma rede de agentes e informantes garantirá a nossa posição e ajudará a estabilizar a sociedade."
+ POL_economic_committee_idea: "Comitê Econômico"
+ POL_economic_committee_idea_desc: "O Comité Económico supervisiona a nacionalização da indústria e regula o mercado."
+ POL_internal_network_idea: "Rede interna"
+ POL_internal_network_idea_desc: "A rede interna de agentes e informadores está a garantir os interesses do Estado."
