--- a/localisation/braz_por/MD_focus_UKR_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_UKR_l_braz_por.yml
@@ -530,14 +530,14 @@
  UKR_Kolomoisky_help_desc: "O conhecido oligarca Kolomoisky abordou-nos com uma proposta para financiar a criação de vários batalhões para manter a capacidade de combate das nossas forças armadas."
  UKR_Firtash_help: "Ajuda do Firtash"
  UKR_Firtash_help_desc: "O conhecido oligarca Firtash abordou-nos com uma proposta para financiar a criação de vários batalhões para manter a capacidade de combate das nossas forças armadas."
- UKR_Kolomoisky_finish: "Dnipro-1 Police Regiment"
- UKR_Kolomoisky_finish_desc: "The last thing Kolomoisky volunteered to finance was the re-formation of the Dnepropetrovsk Defense regiment into a police regiment"
+ UKR_Kolomoisky_finish: "Regimento Policial Dnipro-1"
+ UKR_Kolomoisky_finish_desc: "A última coisa que Kolomoisky se ofereceu para financiar foi a reforma do regimento de Defesa de Dnepropetrovsk em um regimento policial."
  UKR_dissolved_parliament: "Parlamento dissolvido"
  UKR_dissolved_parliament_desc: "The Parliament has been dissolved, and representation is no longer active within the nation.\n§W------------------§!\nThis National Spirit will be §RRemoved§! if we re-instate elections."
- UKR_russia_help_battalions: "Russian Support Battalions"
- UKR_sso: "Special Operations Forces"
+ UKR_russia_help_battalions: "Batalhões de Apoio Russos"
+ UKR_sso: "Forças de Operações Especiais"
  UKR_dshv: "Forças de Assalto Aéreo"
- UKR_kord: "Special Unit CORD"
+ UKR_kord: "Unidade Especial CORD"
  UKR_teroborona: "Defesa Territorial"
  UKR_teroborona_desc: "A defesa territorial será a nossa principal força auxiliar do exército, formada por cidadãos comuns, nos ajudará a resolver a questão do tamanho das nossas forças armadas"
  UKR_shtab: "O Comando das Forças Unidas"
@@ -563,14 +563,14 @@
  ukraine_free_verkhovna: "§CVerkhovna Rada Status: Free§!"
  UKR_verkhovna_free_tt: "The Parliament is free from the influence of the President, with discussions and debates progressing organically without intervention from another governmental body."
  ukraine_influenced_verkhovna: "§pVerkhovna Rada Status: Influenced§!"
- UKR_verkhovna_influenced_tt: "The government has been reformed in such a way that the Parliament has become easily exploitable, with the presidents government being able to easily sway the discussion when the parliament is in session."
+ UKR_verkhovna_influenced_tt: "O governo foi reformado de tal forma que o Parlamento se tornou facilmente explorável, sendo o governo do presidente capaz de influenciar facilmente a discussão quando o parlamento está em sessão."
  ukraine_puppeted_verkhovna: "§OVerkhovna Rada Status: Puppet§!"
- UKR_verkhovna_puppetted_tt: "The Parliament is just another mere tool for the President and his cabinet to trick the people into a false sense of representation."
+ UKR_verkhovna_puppetted_tt: "O Parlamento é apenas mais uma ferramenta para o Presidente e o seu gabinete enganarem o povo, levando-o a um falso sentido de representação."
  UKR_bureau_open: "Start the §YBureaucracy§! Spending Debate"
  UKR_bureau_close: "End the §YBureaucracy§! Spending Debate"
  UKR_increase_bureu: "Request a Higher Bureaucracy Spending"
  UKR_increase_bureu_desc: "If the debate in the Verkhovna Rada is §Gsuccessful§!, the law will be §Ychanged§!"
- UKR_decrease_bureu: "Request a Lower Bureaucracy Spending"
+ UKR_decrease_bureu: "Solicite uma Menor Despesa com Burocracia"
  UKR_decrease_bureu_desc: "If the debate in the Verkhovna Rada is §Gsuccessful§!, the law will be §Ychanged§!"
  UKR_military_open: "Start the §OMilitary§! Spending Debate"
  UKR_military_close: "End the §OMilitary§! Spending Debate"
@@ -606,47 +606,47 @@
  UKR_promote_russian_interests_desc: "We will promote [SOV.GetFlag] Russian Interests within the nation to boost the popularity of the Pro-Russian Bloc in the next election."
  UKR_promote_western_interests: "Promote [USA.GetFlag] Western Interests"
  UKR_promote_western_interests_desc: "We will promote [USA.GetFlag] American Interests within the nation to boost the popularity of the Pro-Western Bloc in the next election."
- UKR_dissolved_verkhovna: " Has Dissolved the Parliament"
+ UKR_dissolved_verkhovna: "Dissolveu o Parlamento"
  UKR_get_25_t62_ifv: "Assemble 50 T-62 BMPP"
  UKR_get_50_mtlb_ifv: "Assemble 50 MT-LB Shkval"
  UKR_get_50_m113: "Assemble 50 MT-LB M113"
  UKR_get_50_buggies: "Assemble 50 General Purpose Vehicles"
- UKR_party_regions_start: "Party of Regions"
- UKR_party_regions_start_desc: "Yanukovych has taken power in the country into his own hands, it's time for the regions!"
- UKR_party_regions_inaguration: "Yanukovych's Inauguration"
- UKR_party_regions_inaguration_desc: "It is time for the inauguration of our new president"
- UKR_party_regions_decrease: "Decrease The Administration Staff"
- UKR_party_regions_decrease_desc: "We will reduce the number of employees of the state apparatus"
- UKR_party_regions_anti_corrupt: "National Anti-Corruption Committee"
- UKR_party_regions_anti_corrupt_desc: "We will create a new ministry, the national Anti-Corruption Committee, to combat corrupt officials in our country"
- UKR_party_regions_unifed_window: "Unified Window Investments"
- UKR_party_regions_unifed_window_desc: "We will introduce new rules for investors in our country, which will make it easier for them to interact with our authorities"
- UKR_party_regions_decrease_agro: "Decrease Regulations On Agriculture"
- UKR_party_regions_decrease_agro_desc: "The agro-industry will receive new benefits, thereby we hope to increase its productivity."
- UKR_party_regions_laizes: "Laisez Faire"
- UKR_party_regions_laizes_desc: "We will partially adopt one of the libertarian principles in our economic policy and will not interfere in economic processes"
- UKR_party_regions_taxx: "Change The Tax Codex"
- UKR_party_regions_taxx_desc: "We will make changes to the tax code that we consider necessary. Our concessions will reduce local taxes by three times!"
- UKR_party_regions_autocracy: "Empower Autocracy"
- UKR_party_regions_autocracy_desc: "A strong government must control everything it can, otherwise it is chaos and disorder that existed before our rule"
- UKR_party_regions_pressure_media: "Pressure On The Media"
- UKR_party_regions_pressure_media_desc: "The media has become too free, it is necessary to cool their ardor"
- UKR_party_regions_stability_reform: "Stability And Reform"
+ UKR_party_regions_start: "Partido das Regiões"
+ UKR_party_regions_start_desc: "Yanukovych assumiu o poder do país com as próprias mãos, é hora das regiões!"
+ UKR_party_regions_inaguration: "Inauguração de Yanukovych"
+ UKR_party_regions_inaguration_desc: "É hora da posse do nosso novo presidente"
+ UKR_party_regions_decrease: "Diminuir o pessoal administrativo"
+ UKR_party_regions_decrease_desc: "Reduziremos o número de funcionários do aparelho estatal"
+ UKR_party_regions_anti_corrupt: "Comitê Nacional Anticorrupção"
+ UKR_party_regions_anti_corrupt_desc: "Criaremos um novo ministério, o Comité Nacional Anticorrupção, para combater funcionários corruptos no nosso país"
+ UKR_party_regions_unifed_window: "Investimentos em janela unificada"
+ UKR_party_regions_unifed_window_desc: "Introduziremos novas regras para os investidores no nosso país, o que facilitará a sua interação com as nossas autoridades"
+ UKR_party_regions_decrease_agro: "Diminuir regulamentações sobre agricultura"
+ UKR_party_regions_decrease_agro_desc: "A agroindústria receberá novos benefícios, esperamos aumentar a sua produtividade."
+ UKR_party_regions_laizes: "Laissez Faire"
+ UKR_party_regions_laizes_desc: "Adotaremos parcialmente um dos princípios libertários em nossa política econômica e não interferiremos nos processos econômicos"
+ UKR_party_regions_taxx: "Alterar o Codex Tributário"
+ UKR_party_regions_taxx_desc: "Faremos as alterações no código tributário que considerarmos necessárias. Nossas concessões reduzirão os impostos locais em três vezes!"
+ UKR_party_regions_autocracy: "Capacite a autocracia"
+ UKR_party_regions_autocracy_desc: "Um governo forte deve controlar tudo o que puder, caso contrário, será o caos e a desordem que existiam antes do nosso governo"
+ UKR_party_regions_pressure_media: "Pressão na mídia"
+ UKR_party_regions_pressure_media_desc: "A mídia ficou muito livre, é preciso esfriar seu ardor"
+ UKR_party_regions_stability_reform: "Estabilidade e Reforma"
  UKR_party_regions_stability_reform_desc: "Reuniremos uma coligação leal de políticos, a que chamaremos \"Estabilidade e Reformas\", que promoverá ativamente os nossos projetos e ideias"
- UKR_party_regions_stability_restricting_freedom_speech: "Restricting Freedom of Speech"
- UKR_party_regions_stability_restricting_freedom_speech_desc: "Freedom of speech ends where it begins to offend us"
- UKR_party_regions_stability_purge_opposition: "Trying to Purge Political Opposition"
- UKR_party_regions_stability_purge_opposition_desc: "The opposition is too self-willed and undermines the institutions of power using its freedom, it's time to fix this"
- UKR_party_regions_lustration: "Lustration of The Governor's Corps And Security Agencies"
- UKR_party_regions_lustration_desc: "Lustration of disloyal and openly harmful to the state people in these structures has long been necessary"
- UKR_party_regions_agreement_opposition: "Agreements With Opposition"
- UKR_party_regions_agreement_opposition_desc: "We will try to establish relations with some part of the opposition, thereby dividing it"
- UKR_party_regions_appease_the_westermists: "Appease The Westermists"
- UKR_party_regions_appease_the_westermists_desc: "Western Ukraine has long been a hotbed of discontent and instability, we will appease them, I will try to give them what they want - promises"
- UKR_party_regions_request_russian: "Request Russian Investments"
- UKR_party_regions_request_russian_desc: "We will request Russian investments, they obviously will not be superfluous."
- UKR_party_regions_personal_gain: "Focus On Personal Gain"
- UKR_party_regions_personal_gain_desc: "The country is certainly good, but it's worth thinking about yourself"
+ UKR_party_regions_stability_restricting_freedom_speech: "Restringindo a liberdade de expressão"
+ UKR_party_regions_stability_restricting_freedom_speech_desc: "A liberdade de expressão termina onde começa a nos ofender"
+ UKR_party_regions_stability_purge_opposition: "Tentando expurgar a oposição política"
+ UKR_party_regions_stability_purge_opposition_desc: "A oposição é muito obstinada e mina as instituições do poder usando a sua liberdade, é hora de consertar isso"
+ UKR_party_regions_lustration: "Lustração do Corpo do Governador e das Agências de Segurança"
+ UKR_party_regions_lustration_desc: "A lustração de pessoas desleais e abertamente prejudiciais ao Estado nessas estruturas tem sido necessária há muito tempo"
+ UKR_party_regions_agreement_opposition: "Acordos com a oposição"
+ UKR_party_regions_agreement_opposition_desc: "Tentaremos estabelecer relações com alguma parte da oposição, dividindo-a assim"
+ UKR_party_regions_appease_the_westermists: "Apaziguar os Westermistas"
+ UKR_party_regions_appease_the_westermists_desc: "A Ucrânia Ocidental tem sido um foco de descontentamento e instabilidade, vamos acalmá-los, tentarei dar-lhes o que querem - promessas"
+ UKR_party_regions_request_russian: "Solicite investimentos russos"
+ UKR_party_regions_request_russian_desc: "Solicitaremos investimentos russos, obviamente não serão supérfluos."
+ UKR_party_regions_personal_gain: "Concentre-se no ganho pessoal"
+ UKR_party_regions_personal_gain_desc: "O país com certeza é bom, mas vale a pena pensar em você"
  UKR_party_regions_titushki: "Rally Out The Titushki"
  UKR_party_regions_titushki_desc: "We will use a new method of discrediting opposition rallies - Titushki."
  UKR_party_regions_regional_council: "Regional Council"
@@ -691,12 +691,12 @@
  UKR_russian_ukrainian_military_coop_desc: "We will strengthen cooperation with the Russian Armed Forces"
  UKR_party_regions_european_chart: "European Language Chart"
  UKR_party_regions_european_chart_desc: "We will sign the European Charter of Regional Languages as an indicator of our democratic attitude towards national minorities"
- UKR_parti_regions_anti_corruption_commitie: "National Anti-Corruption Committee"
+ UKR_parti_regions_anti_corruption_commitie: "Comitê Nacional Anticorrupção"
  UKR_parti_regions_anti_corruption_commitie_desc: "The new committee is designed to fight corrupt officials at all levels"
- UKR_parti_regions_invest_open_window: "Unified Window Investments"
+ UKR_parti_regions_invest_open_window: "Investimentos em janela unificada"
  UKR_parti_regions_taxx: "Reformed Tax Code"
- UKR_parti_regions_laizes: "Laisez Faire"
- UKR_parti_regions_stability_reform: "Stability And Reform"
+ UKR_parti_regions_laizes: "Laissez Faire"
+ UKR_parti_regions_stability_reform: "Estabilidade e Reforma"
  UKR_parti_regions_lustration: "Lustrations"
  UKR_parti_regions_opposition_agree: "Cooperation With The Opposition"
  UKR_parti_regions_titushki: "Titushki"
