--- a/localisation/braz_por/equipment_l_braz_por.yml
+++ b/localisation/braz_por/equipment_l_braz_por.yml
@@ -587,7 +587,7 @@
  AST_IFV_2_short: "M113A1 FSV"
  AST_IFV_3: "ASLAV"
  AST_IFV_3_short: "ASLAV"
- AST_util_vehicle_2: "Land Rover Perentie"
+ AST_util_vehicle_2: "Land Rover Perentié"
  AST_util_vehicle_3: "Bushmaster"
  AST_util_vehicle_5: "Hawkei"
  AUS_infantry_weapons: "L1A1"
