--- a/localisation/russian/equipment_l_russian.yml
+++ b/localisation/russian/equipment_l_russian.yml
@@ -851,8 +851,8 @@
  BLR_transport_plane3_short: "Ил-112"
  BLR_transport_plane4: "Ил-276"
  BLR_transport_plane4_short: "Ил-276"
- BLR_attack_helicopter1: "Mil Mi-24A Hind"
- BLR_attack_helicopter1_short: "Mi-24A Hind"
+ BLR_attack_helicopter1: "Миль Ми-24A «Лань»"
+ BLR_attack_helicopter1_short: "Ми-24А «Лань»"
  BLR_attack_helicopter2: "Mil Mi-24B Super Hind"
  BLR_attack_helicopter2_short: "Mi-24B Super Hind"
  BLR_attack_helicopter3: "Mil Mi-28 Havoc"
