--- a/localisation/english/equipment_l_english.yml
+++ b/localisation/english/equipment_l_english.yml
@@ -1330,14 +1330,14 @@
  CHI_SP_R_arty_3: "PHZ-25"
  CHI_SP_R_arty_4: "PHZ-36"
 
- CHI_SP_arty_0: "Type 70 SPG"
- CHI_SP_arty_1: "Type 86 SPG"
+ CHI_SP_arty_0: "Type 70"
+ CHI_SP_arty_1: "Type 86"
  CHI_SP_arty_2: "PLZ-07"
  CHI_SP_arty_3: "PLZ-05"
  CHI_SP_arty_4: "PLZ-34"
 
- CHI_spart_equipment_0: "Type 70 SPG"
- CHI_spart_equipment_1: "Type 86 SPG"
+ CHI_spart_equipment_0: "Type 70"
+ CHI_spart_equipment_1: "Type 86"
  CHI_spart_equipment_2: "PLZ-07"
  CHI_spart_equipment_3: "PLZ-05"
  CHI_spart_equipment_4: "PLZ-34"
